--- a/Me/Geometric_Transformations_of_Images.ipynb
+++ b/Me/Geometric_Transformations_of_Images.ipynb
@@ -2,12 +2,89 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import cv2 as cv\n",
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = cv.imread('missi5.jpg')\n",
+    "assert img is not None, \"file could not be read, check with os.path.exists()\"\n",
+    "\n",
+    "# effectively doubling the width and height\n",
+    "# INTER_CUBIC interpolation for smoother results\n",
+    "res = cv.resize(img,None,fx=2, fy=2, interpolation = cv.INTER_CUBIC)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#OR\n",
+    "height, width = img.shape[:2]\n",
+    "res = cv.resize(img,(2*width, 2*height), interpolation = cv.INTER_CUBIC)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(280, 450)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "img = cv.imread('missi5.jpg', cv.IMREAD_GRAYSCALE)\n",
+    "assert img is not None, \"file could not be read, check with os.path.exists()\"\n",
+    "rows,cols = img.shape\n",
+    "rows,cols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Defines the transformation matrix M as a 2x3 NumPy array\n",
+    "# No scaling in the x-direction (horizontal stretching/shrinking)\n",
+    "# No shearing in the y-direction (tilting)\n",
+    "# 100-pixel translation to the right\n",
+    "# No shearing in the x-direction (tilting)\n",
+    "# No scaling in the y-direction (vertical stretching/shrinking)\n",
+    "# 50-pixel translation downwards\n",
+    "M = np.float32([[1,0,100],[0,1,50]])\n",
+    "# Applies the affine transformation defined by M to the grayscale image img.\n",
+    "dst = cv.warpAffine(img,M,(cols,rows))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.imshow('img',dst)\n",
+    "cv.waitKey(0)\n",
+    "cv.destroyAllWindows()"
    ]
   },
   {
