--- a/University/Introduction_CV.ipynb
+++ b/University/Introduction_CV.ipynb
@@ -2,11 +2,128 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "c"
+    "import cv2 as cv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = cv.imread('resources/park.jpg')\n",
+    "cv.imshow('Park', img)\n",
+    "\n",
+    "# Wait for a key press to close the window\n",
+    "cv.waitKey(0)\n",
+    "\n",
+    "# Close all open windows\n",
+    "cv.destroyAllWindows()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Converting to grayscale\n",
+    "gray = cv.cvtColor(img, cv.COLOR_BGR2GRAY)\n",
+    "cv.imshow('Gray', gray)\n",
+    "\n",
+    "cv.waitKey(0)\n",
+    "cv.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Blur \n",
+    "blur = cv.GaussianBlur(img, (7,7), cv.BORDER_DEFAULT)\n",
+    "cv.imshow('Blur', blur)\n",
+    "\n",
+    "cv.waitKey(0)\n",
+    "cv.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Edge Cascade\n",
+    " # 125, 175 are  lower higher threshold\n",
+    "canny = cv.Canny(blur, 125, 175)\n",
+    "cv.imshow('Canny Edges', canny)\n",
+    "\n",
+    "cv.waitKey(0)\n",
+    "cv.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dilating the image\n",
+    "dilated = cv.dilate(canny, (7,7), iterations=3) # Performs dilation 3 times \n",
+    "cv.imshow('Dilated', dilated)\n",
+    "\n",
+    "cv.waitKey(0)\n",
+    "cv.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Eroding\n",
+    "eroded = cv.erode(dilated, (7,7), iterations=3) \n",
+    "cv.imshow('Eroded', eroded)\n",
+    "\n",
+    "cv.waitKey(0)\n",
+    "cv.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Resize\n",
+    "# Resizes it to a new width and height of 500*500 pixels each.\n",
+    "# Uses cv.INTER_CUBIC interpolation\n",
+    "resized = cv.resize(img, (500,500), interpolation=cv.INTER_CUBIC)\n",
+    "cv.imshow('Resized', resized)\n",
+    "\n",
+    "cv.waitKey(0)\n",
+    "cv.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cropping\n",
+    "cropped = img[50:200, 200:400]\n",
+    "cv.imshow('Cropped', cropped)\n",
+    "\n",
+    "cv.waitKey(0)\n",
+    "cv.destroyAllWindows()"
    ]
   }
  ],
